--- a/style/styles.css
+++ b/style/styles.css
@@ -1,293 +1,42 @@
-:root
-{
- --main_body: #D6D6D6
-}
-body{
-  background:#333333 url(../res/heic0611b.jpg);
-  margin:0px;
-  font: 400 14px/22px 'Open Sans', Verdana, Helvetica, sans-serif;
-  color:var(--main_body);
-}
-h1{font: 400 44px/60px 'Bree Serif', Georgia, serif; color:var(--main_body);}
-h2{font: 400 20px/22px 'Bree Serif', Georgia, serif; color:var(--main_body);}
-h3{font: 400 16px/16px 'Bree Serif', Georgia, serif; color:var(--main_body);}
-ul{margin:0px; padding:0px;}
-a {text-decoration:underline; color:var(--main_body);}
-a:hover {color:#979797;}
-a img{border:0px;}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My GitHub Pages Site</title>
+  <link rel="stylesheet" href="style/styles.css">
+</head>
+<body>
+  <!-- Header Section -->
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
 
-#container{
-  width:950px;
-  margin:0px auto 300px auto;
-  background:url(images/body-bg.png);
-  overflow:auto;
-  padding-bottom:100px;
-}
+  <!-- Main Content Section -->
+  <main>
+    <section class="hero">
+      <h1>Welcome to My Website</h1>
+      <p>This is a simple website hosted on GitHub Pages.</p>
+      <a href="#" class="button">Learn More</a>
+    </section>
 
-/****************************************************/
-/* HEADER */
-/****************************************************/
+    <section class="content">
+      <h2>About Us</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent vel dolor at augue egestas tristique non at sapien. Donec at arcu sapien.</p>
+    </section>
+  </main>
 
-#header{
-  width:864px;
-  height:115px;
-  background-color:#222222;
-  padding:0px 43px;
-  position: fixed;
-  top:0px;
-  left:50%;
-  margin: 0 0 0 -475px;
-}
-#header #logo{
-  padding-top:25px;
-  float:left;
-}
-#header #main-menu{float:right; padding-top:45px;}
-#header #main-menu li{
-  float:left;
-  list-style:none;
-  margin-left:27px;
-  font: 400 16px/20px 'Bree Serif', Georgia, serif;
-}
-
-
-#header a {text-decoration:none; color:var(--main_body);}
-
-/****************************************************/
-/* ABOUT SECTION */
-/****************************************************/
-
-#about{margin:0px 43px; padding-top:115px;}
-#about h1{float:left;}
-#about #top-social{float:right; padding-top:62px;}
-#about #top-social li{float:left; list-style:none; margin-left:10px;}
-#about #top-social .facebook{
-  text-indent:-9999px; 
-  display:block; 
-  width:26px; 
-  height:26px; 
-  background:url(images/sm-facebook-icon.png) no-repeat;
-}
-#about #top-social .twitter{
-  text-indent:-9999px; 
-  display:block; 
-  width:31px; 
-  height:24px; 
-  background:url(images/sm-twitter-icon.png) no-repeat;
-}
-#about #top-social .linkedin{
-  text-indent:-9999px; 
-  display:block; 
-  width:26px; 
-  height:26px; 
-  background:url(images/sm-linkedin-icon.png) no-repeat;
-}
-#about .content{overflow:auto;}
-#about .content img{float:left; margin-right:40px; border:5px solid #222222;}
-#about .content #service-icons{margin-top:20px;}
-#about .content #service-icons li{
-  display:block;
-  width:108px;
-  height:108px;
-  text-indent:-9999px;
-  list-style:none;
-  float:left;
-  margin-right:20px;
-}
-#about .content #service-icons li.services-design{background:url(images/icon-1.png) no-repeat;}
-#about .content #service-icons li.services-mobile{background:url(images/icon-2.png) no-repeat;}
-#about .content #service-icons li.services-film{background:url(images/icon-3.png) no-repeat;}
-#about .content #service-icons li.services-photo{background:url(images/icon-4.png) no-repeat;}
-
-/****************************************************/
-/* EXPERIENCE SECTION */
-/****************************************************/
-
-
-#starbug{margin:0px 43px; padding-top:115px;}
-#starbug .col{
-  width:235px;
-  float:left;
-}
-#starbug .content{overflow:auto;}
-#starbug .col-mid{margin:0px 65px;}
-#starbug .content{overflow:auto;}
-#starbug .content img{float:left; margin-right:40px; border:5px solid #222222;}
-#starbug .content #service-icons{margin-top:20px;}
-#starbug .content #service-icons li{
-  display:block;
-  width:108px;
-  height:108px;
-  text-indent:-9999px;
-  list-style:none;
-  float:left;
-  margin-right:20px;
-}
-
-
-
-
-
-#experience{margin:0px 43px; padding-top:115px;}
-#experience .col{
-  width:235px;
-  float:left;
-}
-#experience .content{overflow:auto;}
-#experience .col-mid{margin:0px 65px;}
-
-#science{margin:0px 43px; padding-top:115px;}
-#science .col{
-  width:235px;
-  float:left;
-}
-#science .content{overflow:auto;}
-#science .col-mid{margin:0px 65px;}
-#science .content{overflow:auto;}
-#science .content img{float:left; margin-right:40px; border:5px solid #222222;}
-#science .content #service-icons{margin-top:20px;}
-#science .content #service-icons li{
-  display:block;
-  width:108px;
-  height:108px;
-  text-indent:-9999px;
-  list-style:none;
-  float:left;
-  margin-right:20px;
-}
-/****************************************************/
-/* researchgroup SECTION */
-/****************************************************/
-
-#researchgroup{margin:0px 43px; padding-top:115px;}
-#researchgroup .col{
-  width:235px;
-  float:left;
-}
-#researchgroup .content{overflow:auto;}
-#researchgroup .col-mid{margin:0px 65px;}
-
-
-
-/****************************************************/
-/* OUTREACH SECTION */
-/****************************************************/
-
-#outreach{margin:0px 43px; padding-top:115px;}
-#outreach .col{
-  width:235px;
-  float:left;
-}
-#outreach .content{overflow:auto;}
-#outreach .col-mid{margin:0px 65px;}
-
-
-
-
-/****************************************************/
-/* WORK SECTION */
-/****************************************************/
-
-#publication{margin:0px 43px; padding-top:115px;}
-#publication .content{overflow:auto;}
-#publication #publication-thumbs li{
-  list-style:none;
-  float:left;
-  margin:0px 20px 15px 0px;
-  padding:0px;
-}
-#publication #publication-thumbs li.last{margin:0px;}
-
-/****************************************************/
-/* CONNECT SECTION */
-/****************************************************/
-#connect{margin:0px 43px; padding-top:115px;}
-#connect .content{overflow:auto;}
-#connect #form{
-  width:410px;
-  float:left;
-}
-#connect #form span{
-  display:block;
-  float:left;
-  width:100px;
-  padding-top:5px;
-  font: 400 14px/16px 'Bree Serif', Georgia, serif;
-}
-#connect #form input{
-  float:left;
-  width:255px;
-  border:0px;
-  color:#3b3b3b;
-  padding:10px 10px 10px 30px;
-  font: 400 11px/20px 'Open Sans', Verdana, Helvetica, sans-serif;
-  margin-bottom:10px;
-}
-#connect #form textarea{
-  float:left;
-  border:0px;
-  width:255px;
-  height:100px;
-  padding:10px 10px 10px 30px;
-  font: 400 11px/20px 'Open Sans', Verdana, Helvetica, sans-serif;
-  color:#3b3b3b;
-}
-
-#connect #form input.name{background:#222222 url(images/icon-user.png) no-repeat 10px 8px;}
-#connect #form input.email{background:#222222 url(images/icon-mail.png) no-repeat 10px 9px;}
-#connect #form textarea.message{background:#222222 url(images/icon-message.png) no-repeat 10px 8px;}
-#connect #form input.submit{ 
-  width:75px;   
-  height:30px;
-  float:right;
-  padding:0px 0px 5px 0px;
-  margin:10px 16px 0px 0px;
-  background:#222222;
-  color:#3b3b3b;
-  font: 400 14px/16px 'Bree Serif', Georgia, serif;
-}
-
-#connect #social-footer{
-  width:300px;
-  float:left;
-  margin-left:75px;
-}
-#connect #social-footer #sm-links{margin-top:25px;}
-#connect #social-footer #sm-links li{
-  list-style:none;
-  float:left;
-}
-#connect #social-footer #sm-links li a{
-  display:block;
-  text-indent:-9999px;
-  width:26px; 
-  height:26px;
-  margin-right:10px;
-}
-#connect #social-footer #sm-links li a.facebook{background:url(images/sm-facebook-icon.png) no-repeat;}
-#connect #social-footer #sm-links li a.twitter{background:url(images/sm-twitter-icon.png) no-repeat; width:31px;}
-#connect #social-footer #sm-links li a.dribble{background:url(images/sm-dribble-icon.png) no-repeat;}
-#connect #social-footer #sm-links li a.vimeo{background:url(images/sm-vimeo-icon.png) no-repeat; width:27px;}
-#connect #social-footer #sm-links li a.google{background:url(images/sm-google-icon.png) no-repeat;}
-#connect #social-footer #sm-links li a.youtube{background:url(images/sm-youtube-icon.png) no-repeat; width:28px;}
-#connect #social-footer #sm-links li a.linkedin{background:url(images/sm-linkedin-icon.png) no-repeat;}
-
-/****************************************************/
-/* MISC */
-/****************************************************/
-.top-divider, .bottom-divider{
-  width:100%;
-  height:9px;
-  background:url(images/divider.png) repeat-x;
-  clear:both;
-}
-.top-divider{margin-bottom:40px;}
-.bottom-divider{margin-top:40px;}
-
-.vertical-center {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
+  <!-- Footer Section -->
+  <footer>
+    <p>&copy; 2024 My GitHub Pages Site. All rights reserved.</p>
+  </footer>
+</body>
+</html>
