--- a/style/styles.css
+++ b/style/styles.css
@@ -76,6 +76,17 @@ nav ul li a:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.paper-images figure {
+  text-align: center;
+  margin: 0;
+}
+
+.paper-images figcaption {
+  font-size: 14px;
+  color: #666; /* Light grey color for caption */
+  margin-top: 5px;
+}
+
 .paper p {
   margin-top: 10px;
 }
