--- a/style/styles.css
+++ b/style/styles.css
@@ -107,14 +107,14 @@ nav ul li a:hover {
 
 .about-image {
   flex: 1;
-  max-width: 400px; /* Adjust the width of the image container */
+  max-width: 40px; /* Adjust the width of the image container */
 }
 
 .about-image img {
   width: 100%; /* Image will fill the container */
   height: auto; /* Maintain aspect ratio */
   border-radius: 8px; /* Optional: adds rounded corners */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: adds shadow to the image */
+/*   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Optional: adds shadow to the image */ */
 }
 
 /* Footer styles */
